--- a/style.css
+++ b/style.css
@@ -25,9 +25,21 @@ body {
   align-items: center;
   justify-content: space-between;
   color: hsl(292, 42%, 14%);
+  border-radius: 0.234rem;
+  padding: 5px;
+}
+
+.label:focus {
+  outline: hsl(276, 34%, 65%) solid 2px;
+  background-color: hsl(275, 100%, 97%);
+}
+
+.label:hover {
+  background-color: hsl(275, 100%, 97%);
 }
 
 .content {
+  padding: 15px 5px;
   color: hsl(292, 16%, 49%);
 }
 
