--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/assets/images/background-pattern-desktop.svg);
+  background-image: url(./assets/images/background-pattern-desktop.svg);
   background-repeat: no-repeat;
   background-color: hsl(275, 100%, 97%);
   font-family: 'Work Sans', sans-serif;
